--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FC | Desenvolvedor Web</title>
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
+
+    <!-- Estilização -->
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 </head>
-<body>
+<body> 
+    <!-- Navbar -->  
+        <nav class="nav">
+            <div class="nav__container spacing-wrapper">
+                <a href="" class="nav__logo">Fc</a>
+            <div class="bars">
+                <div class="bars__burger"></div>
+            </div>
+            <ul class="nav__list">
+                <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="" class="nav__link">Serviços</a></li>
+                <li class="nav__item"><a href="" class="nav__link">Portfólio</a></li> 
+                <li class="nav__item"><a href="" class="nav__link">Contato</a></li> 
+            </ul>
+            </div>
+        </nav>
+        <!-- Home -->  
+        
+    </div>
     
+    <!-- Javascript -->
+    <script src="/assets/main.js"></script>
 </body>
 </html>
