Sobre mim finalizado

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="/assets/css/responsive.css"> 
 
     <!-- Fontes -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    
 
     <!-- Bibliotecas CSS -->
     <script src="https://kit.fontawesome.com/6465650075.js" crossorigin="anonymous"></script>
@@ -41,13 +40,17 @@
         <!-- About -->
         <section id="about">
             <div class="about__container spacing-wrapper">
-                <h2 class="portfolio__title" data-anime="left">Sobre mim</h2>
+                <h2 class="about__title" data-anime="left">Sobre mim</h2>
+                <img src="/assets/images/eu.jpeg" alt="" class="about__img" data-anime="left">
+                <p class="about__paragraph" data-anime="bottom">Estava no último ano do ensino médio quando percebi meu amor por programação e códigos. Após concluir o ensino básico, ingressei na faculdade de Ensino superior Estácio, onde curso atualmente Análise e Desenvolvimento de Sistemas(2° Periodo).</p>
+                <p class="about__paragraph" data-anime="bottom">Atravessando lógica de programação e diversos cursos, amei o Front-End e decidi que daria meu melhor para sempre fazer um ótimo trabalho.</p>
+                <hr class="about__hr" data-anime="top">
             </div>
         </section>
         <!-- Portfolio -->
         <section id="portfolio">
             <div class="portfolio__container spacing-wrapper">
-                <h2 class="portfolio__title" data-anime="left">Portfólio/Sites Profissionais</h2>
+                <h2 class="portfolio__title" data-anime="left">Portfólio</h2>
                 <div class="portfolio__images">
                     <img src="/assets/images/express-shop.png" alt=""
                     class="portfolio__img" data-anime="bottom">
