--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
         <section id="portfolio">
             <div class="portfolio__container spacing-wrapper">
                 <h2 class="portfolio__title" data-anime="left">Portfólio</h2>
+                <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
                 <div class="portfolio__images">
-                    <img src="/assets/images/express-shop.png" alt=""
-                    class="portfolio__img" data-anime="bottom">
-                    <img src="/assets/images/next-bar.png" alt="" class="portfolio__img" data-anime="bottom">
-                    <img src="/assets/images/cafeteria-blog.png" alt="" class="portfolio__img" data-anime="bottom">
+                    <div class="portfolio__column">
+                        <img src="/assets/images/express-shop.png" alt=""
+                        class="portfolio__img" data-anime="bottom">
+                        <img src="/assets/images/responsive-css-website.png" alt="" class="portfolio__img" data-anime="bottom">
+                    </div>
+                    <div class="portfolio__column">
+                        <img src="/assets/images/next-bar.png" alt="" class="portfolio__img" data-anime="bottom">
+                        <img src="/assets/images/cafeteria-blog.png" alt="" class="portfolio__img" data-anime="bottom">
+                    </div>
+                    
                 </div>
             </div>  
         </section>   
