--- a/index.html
+++ b/index.html
@@ -47,25 +47,62 @@
                 <hr class="about__hr" data-anime="top">
             </div>
         </section>
+        <!-- Services -->
+        <section id="services">
+            <div class="services__container spacing-wrapper">
+                <h2 class="services__title" data-anime="left">Serviços</h2>
+            </div>
+        </section>
         <!-- Portfolio -->
         <section id="portfolio">
             <div class="portfolio__container spacing-wrapper">
                 <h2 class="portfolio__title" data-anime="left">Portfólio</h2>
                 <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
                 <div class="portfolio__images">
-                    <div class="portfolio__column">
-                        <img src="/assets/images/express-shop.png" alt=""
-                        class="portfolio__img" data-anime="bottom">
-                        <img src="/assets/images/responsive-css-website.png" alt="" class="portfolio__img" data-anime="bottom">
-                    </div>
-                    <div class="portfolio__column">
-                        <img src="/assets/images/next-bar.png" alt="" class="portfolio__img" data-anime="bottom">
-                        <img src="/assets/images/cafeteria-blog.png" alt="" class="portfolio__img" data-anime="bottom">
-                    </div>
-                    
+                        <div class="site__container" data-anime="bottom">
+                            <img src="/assets/images/express-shop.png" alt=""
+                            class="site__img">
+                            <div class="site__description">
+                                <div class="site__tags">
+                                    <div class="site__tag">Html</div>
+                                    <div class="site__tag">Css</div>
+                                </div>
+                                <p class="site__title">Express Shop</p>
+                            </div>
+                        </div>  
+                        <div class="site__container" data-anime="bottom">
+                            <img src="/assets/images/responsive-css-website.png" alt="" class="site__img">
+                            <div class="site__description">
+                                <div class="site__tags">
+                                    <div class="site__tag">Html</div>
+                                    <div class="site__tag">Css</div>
+                                </div>
+                                <p class="site__title">Astronaut</p>
+                            </div>
+                        </div> 
+                        <div class="site__container" data-anime="bottom">
+                            <img src="/assets/images/next-bar.png" alt="" class="site__img">
+                            <div class="site__description">
+                                <div class="site__tags">
+                                    <div class="site__tag">Html</div>
+                                    <div class="site__tag">Css</div>
+                                    <div class="site__tag">Figma</div>
+                                </div>
+                                <p class="site__title">Next Bar</p>
+                            </div>
+                        </div>
+                        <div class="site__container"  data-anime="bottom">
+                            <img src="/assets/images/cafeteria-blog.png.png" alt="" class="site__img">
+                            <div class="site__description">
+                                <div class="site__tags">
+                                    <div class="site__tag">Html</div>
+                                    <div class="site__tag">Css</div>
+                                </div>
+                                <p class="site__title">Cafeteria Blog</p>
+                            </div>
+                        </div>
                 </div>
             </div>  
-            teste
         </section>   
     <!-- Javascript -->
     <script src="/assets/main.js"></script>
