--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="site__container"  data-anime="bottom">
-                            <img src="/assets/images/cafeteria-blog.png.png" alt="" class="site__img">
+                            <img src="/assets/images/cafeteria-blog.png" alt="" class="site__img">
                             <div class="site__description">
                                 <div class="site__tags">
                                     <div class="site__tag">Html</div>
