--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <i class="fab fa-html5 home__icon home__icon--html"></i>
                     <i class="fab fa-css3-alt home__icon home__icon--css"></i>
                     <i class="fab fa-js home__icon home__icon--js"></i>
+                    <i class="fab fa-php home__icon"></i>
                     <i class="fab fa-wordpress home__icon home__icon--wordpress"></i>
                     <i class="fab fa-bootstrap home__icon home__icon--bootstrap"></i>
                     <i class="fab fa-sass home__icon home__icon--sass"></i>
