--- a/index.html
+++ b/index.html
@@ -54,20 +54,23 @@
             <div class="services__container spacing-wrapper">
                 <h2 class="services__title" data-anime="left">Serviços</h2>
                 <div class="card__container">
-                    <div class="card" data-anime="bottom">
-                        <i class="fas fa-rocket card__icon"></i>    
-                        <h3 class="card__title">Rápido como um foguete</h3>                
-                    </div>
-                    <div class="card card--middle" data-anime="bottom">
+                    <div class="card" data-anime="bottom"> 
                         <div class="card__iconContainer">
                             <i class="fas fa-desktop card__icon"></i>  
-                            <i class="fas fa-mobile card__icon card__icon--mobile"></i>
+                            <i class="fas fa-mobile card__icon card__icon--mobile"></i>  
                         </div>
-                        <h3 class="card__title">Responsividade máxima</h3>     
+                        <h3 class="card__title">Sites responsivos</h3>   
+                        <p class="card__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus provident nam error ex repellat ratione facere facilis ipsam cum maxime!</p>             
+                    </div>
+                    <div class="card card--middle" data-anime="bottom">
+                        <i class="fas fa-rocket card__icon"></i> 
+                        <h3 class="card__title">Site 10x mais rápido!</h3>  
+                        <p class="card__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus provident nam error ex repellat ratione facere facilis ipsam cum maxime!</p>    
                     </div>
                     <div class="card" data-anime="bottom">
                         <i class="fas fa-paint-roller card__icon"></i> 
-                        <h3 class="card__title">Design Impecável</h3>                      
+                        <h3 class="card__title">Design Impecável</h3>  
+                        <p class="card__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus provident nam error ex repellat ratione facere facilis ipsam cum maxime!</p>                     
                     </div>
                 </div>
             </div>
