--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="home">
             <div class="home__container spacing-wrapper">
                 <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
-                <p class="home__description" data-anime="bottom">Desenvolvedor web feelancer & Ui/Ux.</p>
+                <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
                 <p class="home__description home__description--2 mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado. 
                 Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
                 <div class="home__icons" data-anime="bottom">
@@ -60,17 +60,17 @@
                             <i class="fas fa-mobile card__icon card__icon--mobile"></i>  
                         </div>
                         <h3 class="card__title">Sites responsivos</h3>   
-                        <p class="card__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus provident nam error ex repellat ratione facere facilis ipsam cum maxime!</p>             
+                        <p class="card__paragraph">Se você tem um negócio é essencial que seu site esteja presente em todos dispositivos, pode contar comigo para tornar isso possível.</p>             
                     </div>
                     <div class="card card--middle" data-anime="bottom">
                         <i class="fas fa-rocket card__icon"></i> 
                         <h3 class="card__title">Site 10x mais rápido!</h3>  
-                        <p class="card__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus provident nam error ex repellat ratione facere facilis ipsam cum maxime!</p>    
+                        <p class="card__paragraph">Um site lento espanta clientes. Através de ferramentas de optimização de carregamento, imagens e diversas outras propriedades farei seu site carregar na velocidade da luz!.</p>    
                     </div>
                     <div class="card" data-anime="bottom">
-                        <i class="fas fa-paint-roller card__icon"></i> 
-                        <h3 class="card__title">Design Impecável</h3>  
-                        <p class="card__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus provident nam error ex repellat ratione facere facilis ipsam cum maxime!</p>                     
+                        <i class="fas fa-code card__icon"></i>
+                        <h3 class="card__title">Manutenção de Website</h3>  
+                        <p class="card__paragraph">Precisa mexer no seu site mas não sabe como? Conte comigo para fazer toda manutenção que seu site precisa e deixar ele novo.</p>                     
                     </div>
                 </div>
             </div>
