--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="about">
             <div class="about__container spacing-wrapper">
                 <h2 class="about__title" data-anime="left">Sobre mim</h2>
-                <img src="/assets/images/eu.jpeg" alt="" class="about__img" data-anime="left">
+                <img src="/assets/images/eu.png" alt="" class="about__img" data-anime="left">
                 <p class="about__paragraph" data-anime="bottom">Estava no último ano do ensino médio quando percebi meu amor por programação e códigos. Após concluir o ensino básico, ingressei na faculdade de Ensino superior Estácio, onde curso atualmente Análise e Desenvolvimento de Sistemas(2° Periodo).</p>
                 <p class="about__paragraph" data-anime="bottom">Atravessando lógica de programação e diversos cursos, amei o Front-End e decidi que daria meu melhor para sempre fazer um ótimo trabalho.</p>
                 <hr class="about__hr" data-anime="top">
