Cores e background atualizado 26 11

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FC - Desenvolvimento Web</title>
+    <title>FC | Desenvolvimento Web</title>
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
 
     <!-- Estilização -->
@@ -22,23 +22,24 @@
             <div class="bars__burger"></div>
         </div>
         <!-- Home -->  
-        <section id="home">
-            <div class="home__container spacing-wrapper">
-                <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
-                <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
-                <p class="home__description home__description--2 mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado. 
-                Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
-                <div class="home__icons" data-anime="bottom">
-                    <i class="fab fa-html5 home__icon home__icon--html"></i>
-                    <i class="fab fa-css3-alt home__icon home__icon--css"></i>
-                    <i class="fab fa-js home__icon home__icon--js"></i>
-                    <i class="fab fa-php home__icon"></i>
-                    <i class="fab fa-wordpress home__icon home__icon--wordpress"></i>
-                    <i class="fab fa-bootstrap home__icon home__icon--bootstrap"></i>
-                    <i class="fab fa-sass home__icon home__icon--sass"></i>
+            <section id="home">
+                <div id = "particles-js"></div>
+                <div class="home__container spacing-wrapper" class="particles-js">
+                    <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
+                    <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
+                    <p class="home__description home__description--2 mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado. 
+                    Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
+                    <div class="home__icons" data-anime="bottom">
+                        <i class="fab fa-html5 home__icon home__icon--html"></i>
+                        <i class="fab fa-css3-alt home__icon home__icon--css"></i>
+                        <i class="fab fa-js home__icon home__icon--js"></i>
+                        <i class="fab fa-php home__icon"></i>
+                        <i class="fab fa-wordpress home__icon home__icon--wordpress"></i>
+                        <i class="fab fa-bootstrap home__icon home__icon--bootstrap"></i>
+                        <i class="fab fa-sass home__icon home__icon--sass"></i>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
         <!-- About -->
         <section id="about">
             <div class="about__container spacing-wrapper">
@@ -81,52 +82,54 @@
                 <h2 class="portfolio__title" data-anime="left">Portfólio</h2>
                 <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
                 <div class="portfolio__images">
-                        <div class="site__container" data-anime="bottom">
-                            <img src="/assets/images/express-shop.png" alt=""
-                            class="site__img">
-                            <div class="site__description">
-                                <div class="site__tags">
-                                    <div class="site__tag">Html</div>
-                                    <div class="site__tag">Css</div>
-                                </div>
-                                <p class="site__title">Express Shop</p>
+                    <div class="site__container" data-anime="bottom">
+                        <img src="/assets/images/express-shop.png" alt=""
+                        class="site__img">
+                        <div class="site__description">
+                            <div class="site__tags">
+                                <div class="site__tag">Html</div>
+                                <div class="site__tag">Css</div>
                             </div>
-                        </div>  
-                        <div class="site__container" data-anime="bottom">
-                            <img src="/assets/images/responsive-css-website.png" alt="" class="site__img">
-                            <div class="site__description">
-                                <div class="site__tags">
-                                    <div class="site__tag">Html</div>
-                                    <div class="site__tag">Css</div>
-                                </div>
-                                <p class="site__title">Astronaut</p>
-                            </div>
-                        </div> 
-                        <div class="site__container" data-anime="bottom">
-                            <img src="/assets/images/next-bar.png" alt="" class="site__img">
-                            <div class="site__description">
-                                <div class="site__tags">
-                                    <div class="site__tag">Html</div>
-                                    <div class="site__tag">Css</div>
-                                    <div class="site__tag">Figma</div>
-                                </div>
-                                <p class="site__title">Next Bar</p>
-                            </div>
+                            <p class="site__title">Express Shop</p>
                         </div>
-                        <div class="site__container"  data-anime="bottom">
-                            <img src="/assets/images/cafeteria-blog.png" alt="" class="site__img">
-                            <div class="site__description">
-                                <div class="site__tags">
-                                    <div class="site__tag">Html</div>
-                                    <div class="site__tag">Css</div>
-                                </div>
-                                <p class="site__title">Cafeteria Blog</p>
+                    </div>  
+                    <div class="site__container" data-anime="bottom">
+                        <img src="/assets/images/responsive-css-website.png" alt="" class="site__img">
+                        <div class="site__description">
+                            <div class="site__tags">
+                                <div class="site__tag">Html</div>
+                                <div class="site__tag">Css</div>
                             </div>
+                            <p class="site__title">Astronaut</p>
                         </div>
+                    </div> 
+                    <div class="site__container" data-anime="bottom">
+                        <img src="/assets/images/next-bar.png" alt="" class="site__img">
+                        <div class="site__description">
+                            <div class="site__tags">
+                                <div class="site__tag">Html</div>
+                                <div class="site__tag">Css</div>
+                                <div class="site__tag">Figma</div>
+                            </div>
+                            <p class="site__title">Next Bar</p>
+                        </div>
+                    </div>
+                    <div class="site__container"  data-anime="bottom">
+                        <img src="/assets/images/cafeteria-blog.png" alt="" class="site__img">
+                        <div class="site__description">
+                            <div class="site__tags">
+                                <div class="site__tag">Html</div>
+                                <div class="site__tag">Css</div>
+                            </div>
+                            <p class="site__title">Cafeteria Blog</p>
+                        </div>
+                    </div>
                 </div>
             </div>  
         </section>   
     <!-- Javascript -->
+    <script src="/assets/particles.js"></script>
+    <script src="/assets/app.js"></script>
     <script src="/assets/main.js"></script>
 </body>
 </html>
