--- a/index.html
+++ b/index.html
@@ -22,24 +22,27 @@
             <div class="bars__burger"></div>
         </div>
         <!-- Home -->  
-            <section id="home">
-                <div id = "particles-js"></div>
-                <div class="home__container spacing-wrapper" class="particles-js">
-                    <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
-                    <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
-                    <p class="home__description home__description--2 mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado. 
-                    Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
-                    <div class="home__icons" data-anime="bottom">
-                        <i class="fab fa-html5 home__icon home__icon--html"></i>
-                        <i class="fab fa-css3-alt home__icon home__icon--css"></i>
-                        <i class="fab fa-js home__icon home__icon--js"></i>
-                        <i class="fab fa-php home__icon"></i>
-                        <i class="fab fa-wordpress home__icon home__icon--wordpress"></i>
-                        <i class="fab fa-bootstrap home__icon home__icon--bootstrap"></i>
-                        <i class="fab fa-sass home__icon home__icon--sass"></i>
-                    </div>
+        <section id="home">
+            <div id = "particles-js"></div>
+            <div class="home__container spacing-wrapper" class="particles-js">
+                <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
+                <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
+                <p class="home__description home__description--2 mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado. 
+                Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
+                <div class="home__icons" data-anime="bottom">
+                    <i class="fab fa-html5 home__icon home__icon--html"></i>
+                    <i class="fab fa-css3-alt home__icon home__icon--css"></i>
+                    <i class="fab fa-js home__icon home__icon--js"></i>
+                    <i class="fab fa-php home__icon"></i>
+                    <i class="fab fa-wordpress home__icon home__icon--wordpress"></i>
+                    <i class="fab fa-bootstrap home__icon home__icon--bootstrap"></i>
+                    <i class="fab fa-sass home__icon home__icon--sass"></i>
                 </div>
-            </section>
+            </div>
+        </section>
+        
+            <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
+        
         <!-- About -->
         <section id="about">
             <div class="about__container spacing-wrapper">
@@ -94,17 +97,27 @@
                         </div>
                     </div>  
                     <div class="site__container" data-anime="bottom">
-                        <img src="/assets/images/responsive-css-website.png" alt="" class="site__img">
+                        <div class="site__imgContainer">
+                            <img src="/assets/images/soul.png" alt="" class="site__img">
+                            <div class="site__imgMiddle">
+                                <a href="" class="site__imgText">Visitar Site</a>
+                            </div>
+                        </div>
                         <div class="site__description">
                             <div class="site__tags">
                                 <div class="site__tag">Html</div>
                                 <div class="site__tag">Css</div>
                             </div>
-                            <p class="site__title">Astronaut</p>
+                            <p class="site__title">Soul</p>
                         </div>
                     </div> 
                     <div class="site__container" data-anime="bottom">
-                        <img src="/assets/images/next-bar.png" alt="" class="site__img">
+                        <div class="site__imgContainer">
+                            <img src="/assets/images/next-bar.png" alt="" class="site__img">
+                            <div class="site__imgMiddle">
+                                <a href="" class="site__imgText">Visitar Site</a>
+                            </div>
+                        </div>
                         <div class="site__description">
                             <div class="site__tags">
                                 <div class="site__tag">Html</div>
@@ -122,6 +135,16 @@
                                 <div class="site__tag">Css</div>
                             </div>
                             <p class="site__title">Cafeteria Blog</p>
+                        </div>
+                    </div>
+                    <div class="site__container"  data-anime="bottom">
+                        <img src="/assets/images/responsive-css-website.png" alt="" class="site__img">
+                        <div class="site__description">
+                            <div class="site__tags">
+                                <div class="site__tag">Html</div>
+                                <div class="site__tag">Css</div>
+                            </div>
+                            <p class="site__title">Astronaut</p>
                         </div>
                     </div>
                 </div>
