--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
         
         <!-- About -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#121212" fill-opacity="1" d="M0,288L48,261.3C96,235,192,181,288,181.3C384,181,480,235,576,250.7C672,267,768,245,864,218.7C960,192,1056,160,1152,149.3C1248,139,1344,149,1392,154.7L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-          </svg>
         <section id="about">
             <div class="about__container spacing-wrapper">
                 <h2 class="about__title" data-anime="left">Sobre mim</h2>
@@ -58,7 +55,6 @@
         </section>
         <!-- Services -->
         <section id="services">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212121" fill-opacity="1" d="M0,288L48,261.3C96,235,192,181,288,181.3C384,181,480,235,576,250.7C672,267,768,245,864,218.7C960,192,1056,160,1152,149.3C1248,139,1344,149,1392,154.7L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
             <div class="services__container spacing-wrapper">
                 <h2 class="services__title" data-anime="left">Serviços</h2>
                 <div class="card__container">
@@ -70,7 +66,7 @@
                         <h3 class="card__title">Sites responsivos</h3>   
                         <p class="card__paragraph">Se você tem um negócio é essencial que seu site esteja presente em todos dispositivos, pode contar comigo para tornar isso possível.</p>             
                     </div>
-                    <div class="card card--middle" data-anime="bottom">
+                    <div class="card" data-anime="bottom">
                         <i class="fas fa-rocket card__icon"></i> 
                         <h3 class="card__title">Site 10x mais rápido!</h3>  
                         <p class="card__paragraph">Um site lento espanta clientes. Através de ferramentas de optimização de carregamento, imagens e diversas outras propriedades farei seu site carregar na velocidade da luz!.</p>    
@@ -83,9 +79,6 @@
                 </div>
             </div>
         </section>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#121212" fill-opacity="1" d="M0,288L48,261.3C96,235,192,181,288,181.3C384,181,480,235,576,250.7C672,267,768,245,864,218.7C960,192,1056,160,1152,149.3C1248,139,1344,149,1392,154.7L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-          </svg>
         <!-- Portfolio -->
         <section id="portfolio">
             <div class="portfolio__container spacing-wrapper">
@@ -155,8 +148,22 @@
                         </div>
                     </div>
                 </div>
+                <h3 class="portfolio__subtitle" data-anime="left">Projetos Independentes</h3>
             </div>  
-        </section>   
+        </section>  
+        <!-- Contact --> 
+        <section id="contact">
+            <div class="contact__container spacing-wrapper">
+                <h2 class="contact__title" data-anime="left">Contato</h2>  
+                <div class="contact__subtitleContainer" data-anime="bottom"> 
+                    <p class="contact__subtitle contact__subtitle--1">Não perca tempo, entre em contato comigo e faça um orçamento hoje mesmo.</p>
+                    <p class="contact__subtitle"><i class="far fa-envelope" class="contact__icon"></i> fernando.chaves16@hotmail.com</p>  
+                    <p class="contact__subtitle"> <i class="fab fa-instagram"></i> Instagram - @devsfe_1</p>   
+                    <p class="contact__subtitle"><i class="fab fa-whatsapp contact__icon"></i> Whatsapp - (51)99885-7983 </p>
+                    </div>           
+            </div>
+        </section>
+
     <!-- Javascript -->
     <script src="/assets/particles.js"></script>
     <script src="/assets/app.js"></script>
