--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
                 </div>
             </div>
         </section>
-        
-            <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
-        
+        <!-- Whatsapp Icon -->
+        <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
         <!-- About -->
         <section id="about">
-            <div class="about__container spacing-wrapper">
-                <h2 class="about__title" data-anime="left">Sobre mim</h2>
-                <img src="/assets/images/eu.png" alt="" class="about__img" data-anime="left">
+            <div class="container spacing-wrapper">
+                <h2 data-anime="left">Sobre mim</h2>
+                <img src="/assets/images/eu.webp" alt="" class="about__img" data-anime="left">
                 <p class="about__paragraph" data-anime="bottom">Estava no último ano do ensino médio quando percebi meu amor por programação e códigos. Após concluir o ensino básico, ingressei na faculdade de Ensino superior Estácio, onde curso atualmente Análise e Desenvolvimento de Sistemas(2° Periodo).</p>
                 <p class="about__paragraph" data-anime="bottom">Atravessando lógica de programação e diversos cursos, amei o Front-End e decidi que daria meu melhor para sempre fazer um ótimo trabalho.</p>
                 <hr class="about__hr" data-anime="top">
@@ -55,8 +54,8 @@
         </section>
         <!-- Services -->
         <section id="services">
-            <div class="services__container spacing-wrapper">
-                <h2 class="services__title" data-anime="left">Serviços</h2>
+            <div class="container spacing-wrapper">
+                <h2 data-anime="left">Serviços</h2>
                 <div class="card__container">
                     <div class="card" data-anime="bottom"> 
                         <div class="card__iconContainer">
@@ -81,12 +80,12 @@
         </section>
         <!-- Portfolio -->
         <section id="portfolio">
-            <div class="portfolio__container spacing-wrapper">
-                <h2 class="portfolio__title" data-anime="left">Portfólio</h2>
+            <div class="container spacing-wrapper">
+                <h2 data-anime="left">Portfólio</h2>
                 <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
                 <div class="portfolio__images">
                     <div class="site__container" data-anime="bottom">
-                        <img src="/assets/images/express-shop.png" alt=""
+                        <img src="/assets/images/express-shop.webp" alt=""
                         class="site__img">
                         <div class="site__description">
                             <div class="site__tags">
@@ -98,7 +97,7 @@
                     </div>  
                     <div class="site__container" data-anime="bottom">
                         <div class="site__imgContainer">
-                            <img src="/assets/images/soul.png" alt="" class="site__img">
+                            <img src="/assets/images/soul.webp" alt="" class="site__img">
                             <div class="site__imgMiddle">
                                 <a href="" class="site__imgText">Visitar Site</a>
                             </div>
@@ -113,7 +112,7 @@
                     </div> 
                     <div class="site__container" data-anime="bottom">
                         <div class="site__imgContainer">
-                            <img src="/assets/images/next-bar.png" alt="" class="site__img">
+                            <img src="/assets/images/next-bar.webp" alt="" class="site__img">
                             <div class="site__imgMiddle">
                                 <a href="" class="site__imgText">Visitar Site</a>
                             </div>
@@ -128,7 +127,7 @@
                         </div>
                     </div>
                     <div class="site__container"  data-anime="bottom">
-                        <img src="/assets/images/cafeteria-blog.png" alt="" class="site__img">
+                        <img src="/assets/images/cafeteria-blog.webp" alt="" class="site__img">
                         <div class="site__description">
                             <div class="site__tags">
                                 <div class="site__tag">Html</div>
@@ -138,7 +137,7 @@
                         </div>
                     </div>
                     <div class="site__container"  data-anime="bottom">
-                        <img src="/assets/images/responsive-css-website.png" alt="" class="site__img">
+                        <img src="/assets/images/responsive-css-website.webp" alt="" class="site__img">
                         <div class="site__description">
                             <div class="site__tags">
                                 <div class="site__tag">Html</div>
@@ -154,7 +153,7 @@
         <!-- Contact --> 
         <section id="contact">
             <div class="contact__container spacing-wrapper">
-                <h2 class="contact__title" data-anime="left">Contato</h2>  
+                <h2 data-anime="left">Contato</h2>  
                 <div class="contact__subtitleContainer" data-anime="bottom"> 
                     <p class="contact__subtitle contact__subtitle--1">Não perca tempo, entre em contato comigo e faça um orçamento hoje mesmo.</p>
                     <p class="contact__subtitle"><i class="far fa-envelope" class="contact__icon"></i> fernando.chaves16@hotmail.com</p>  
